# pymab

./: .buildinfo  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  game.html  genindex.html  index.html  objects.inv  policies.html  py-modindex.html  pyproject.toml  requirements.txt  reward_distribution.html  run_test.sh  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  game.doctree  index.doctree  policies.doctree  reward_distribution.doctree
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: .github-deploy.yml  .github-tests-docs.yml
_modules/: index.html
_modules/pymab/: game.html  reward_distribution.html
_sources/: index.rst.txt  policies.rst.txt  reward_distribution.rst.txt
_static/: documentation_options.js
docs/source/: conf.py  game.rst  index.rst  policies.rst
documentation/source/: reward_distribution.rst
examples/: basic_usage.ipynb  bayesian_ucb_bernoulli.ipynb  bayesian_ucb_bernoulli.py  comparing_policies.ipynb  contextual_bandits_proxies.ipynb  non_stationary_policies.ipynb  non_stationary_policies.py  thomson_sampling.ipynb  thomson_sampling_bernoulli.ipynb  thomson_sampling_gaussian.ipynb
pymab/: __init__.py  game.py  logging.json  logging_config.py  plot_config.py  reward_distribution.py  static.py
pymab/policies/: bayesian_ucb.py  contextual_bandits.py  epsilon_greedy.py  gradient.py  greedy.py  policy.py  softmax_selection.py  thompson_sampling.py  ucb.py  (+1 more)
tests/: test_game.py  test_reward_distribution.py
(+15 files in other folders)
