[metadata]
name = pymab
version = attr: pymab.__version__

[options]
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    pandas
    plotly
    pymc3
    scipy

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
testpaths = tests

[mypy]
ignore_missing_imports = True